--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ DB_HOST=localhost
 DB_DATABASE=seu_banco_de_dados
 DB_PASSWORD=sua_senha_aqui
 DB_PORT=5432
+SECRET_KEY='uma_chave_super_secreta_e_muito_aleatoria_123!@#'
